--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@
 
 
 body{
-    background-image: url(https://www.simpleimageresizer.com/_uploads/photos/b1f88df0/smoothie_menu_back_1_1904x950.jpg)
+    background-image: url(https://www.simpleimageresizer.com/_uploads/photos/b1f88df0/smoothie_menu_back_1_1904x950.jpg);
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 h1, h2{
